--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -2,7 +2,6 @@
 import '@fontsource-variable/inter';
 
 // 'DM Sans'
-// Nunito
 // Dosis
 // Outfit
 // Roboto
@@ -21,21 +20,28 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans:
+      'Helvetica Neue', 'Inter Variable', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      sans-serif;
+    --aw-font-serif:
+      'Helvetica Neue', 'Inter Variable', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      sans-serif;
+    --aw-font-heading:
+      'Helvetica Neue', 'Inter Variable', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      sans-serif;
 
-    --aw-color-primary: rgb(0 197 153);
+    --aw-color-primary: #00c599;
     --aw-color-secondary: rgb(0 170 133);
     --aw-color-accent: rgb(109 40 217);
 
-    --aw-color-text-heading: rgb(0 0 0);
-    --aw-color-text-default: rgb(16 16 16);
+    --aw-color-text-heading: #2e2e2e;
+    --aw-color-text-default: #2e2e2e;
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: rgb(255 255 255);
-
-    --aw-color-bg-page-dark: rgb(15 27 23);
-    --aw-color-bg-secondary: #eef1f0;
+    --aw-color-bg-page: #faf9f6;
+    --aw-color-border: #e3e0db;
+    --aw-color-bg-page-dark: rgb(231, 231, 231);
+    --aw-color-bg-secondary: #f2f0ec;
+    --aw-color-behaviour-purple: #f3eaf4;
 
     ::selection {
       background-color: rgb(0 197 153 / 20%);
@@ -56,7 +62,9 @@ import '@fontsource-variable/inter';
     --aw-color-text-muted: rgba(229, 236, 246, 0.925);
     --aw-color-bg-page: rgb(14 22 20);
     --aw-color-bg-secondary: rgb(24 34 30);
-    : selection {
+    --aw-color-behaviour-purple: #be93e3;
+
+    ::selection {
       background-color: rgb(0 197 153 / 30%);
       color: rgb(255 255 255);
     }
