--- a/src/components/widgets/Features2.astro
+++ b/src/components/widgets/Features2.astro
@@ -20,18 +20,25 @@ const {
 ---
 
 <WidgetWrapper id={id} isDark={isDark} containerClass={`max-w-7xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
-  <Headline title={title} subtitle={subtitle} tagline={tagline} classes={classes?.headline as Record<string, string>} />
+  <Headline
+    title={title}
+    subtitle={subtitle}
+    tagline={tagline}
+    classes={{
+      title: 'text-4xl md:text-5xl font-bold tracking-tight mb-6 font-heading',
+      ...((classes?.headline as Record<string, string>) ?? {}),
+    }}
+  />
   <ItemGrid2
     items={items}
     columns={columns}
     defaultIcon={defaultIcon}
     classes={{
-      container: 'gap-4 md:gap-6',
+      container:
+        'max-w-6xl mx-auto px-4 pt-0 sm:px-8 sm:pt-0 lg:px-12 lg:pt-0 pb-[2.8rem] sm:pb-[4.2rem] lg:pb-[5.6rem] gap-4 md:gap-6',
       panel:
-        'rounded-lg shadow-[0_4px_30px_rgba(0,0,0,0.1)] dark:shadow-[0_4px_30px_rgba(0,0,0,0.1)] backdrop-blur border border-[#ffffff29] bg-white dark:bg-slate-900 p-6',
-      // panel:
-      //   "text-center bg-page items-center md:text-left rtl:md:text-right md:items-start p-6 p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-800",
-      icon: 'w-12 h-12 mb-6 text-primary',
+        'w-full rounded-[16px] dark:shadow-[0_4px_30px_rgba(0,0,0,0.1)] backdrop-blur border border-border bg-white dark:bg-slate-900 p-6',
+      icon: 'w-14 h-14 mb-6 text-primary',
       ...((classes?.items as Record<string, never>) ?? {}),
     }}
   />
