--- a/src/components/widgets/Testimonials.astro
+++ b/src/components/widgets/Testimonials.astro
@@ -19,51 +19,53 @@ const {
 } = Astro.props;
 ---
 
-<WidgetWrapper id={id} isDark={isDark} containerClass={`max-w-6xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
+<WidgetWrapper id={id} isDark={isDark} containerClass={`max-w-7xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
   <Headline title={title} subtitle={subtitle} tagline={tagline} />
 
-  <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-    {
-      testimonials &&
-        testimonials.map(({ title, testimonial, name, job, image }) => (
-          <div class="flex h-auto intersect-once motion-safe:md:intersect:animate-fade motion-safe:md:opacity-0 intersect-quarter">
-            <div class="flex flex-col p-4 md:p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-600">
-              {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
-              {testimonial && (
-                <blockquote class="flex-auto">
-                  <p class="text-muted">" {testimonial} "</p>
-                </blockquote>
-              )}
-
-              <hr class="border-slate-200 dark:border-slate-600 my-4" />
-
-              <div class="flex items-center">
-                {image && (
-                  <div class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600">
-                    {typeof image === 'string' ? (
-                      <Fragment set:html={image} />
-                    ) : (
-                      <Image
-                        class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600 min-w-full min-h-full"
-                        width={40}
-                        height={40}
-                        widths={[400, 768]}
-                        layout="fixed"
-                        {...image}
-                      />
-                    )}
-                  </div>
+  <div class="max-w-6xl mx-auto px-4 pb-[2.8rem] sm:px-8 sm:pb-[4.2rem] lg:px-12 lg:pb-[5.6rem]">
+    <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+      {
+        testimonials &&
+          testimonials.map(({ title, testimonial, name, job, image }) => (
+            <div class="intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+              <div class="flex h-full flex-col rounded-[16px] border border-border bg-white p-6  backdrop-blur dark:border-slate-700 dark:bg-slate-900 dark:shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
+                {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
+                {testimonial && (
+                  <blockquote class="flex-auto">
+                    <p class="text-muted">" {testimonial} "</p>
+                  </blockquote>
                 )}
 
-                <div class="grow ml-3 rtl:ml-0 rtl:mr-3">
-                  {name && <p class="text-base font-semibold">{name}</p>}
-                  {job && <p class="text-xs text-muted">{job}</p>}
+                <hr class="my-4 border-slate-200 dark:border-slate-600" />
+
+                <div class="flex items-center">
+                  {image && (
+                    <div class="h-10 w-10 overflow-hidden rounded-full border border-slate-200 dark:border-slate-600">
+                      {typeof image === 'string' ? (
+                        <Fragment set:html={image} />
+                      ) : (
+                        <Image
+                          class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600 min-w-full min-h-full"
+                          width={40}
+                          height={40}
+                          widths={[400, 768]}
+                          layout="fixed"
+                          {...image}
+                        />
+                      )}
+                    </div>
+                  )}
+
+                  <div class="ml-3 grow rtl:ml-0 rtl:mr-3">
+                    {name && <p class="text-base font-semibold">{name}</p>}
+                    {job && <p class="text-xs text-muted">{job}</p>}
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        ))
-    }
+          ))
+      }
+    </div>
   </div>
   {
     callToAction && (
